--- a/practice-one/src/css/components/title.css
+++ b/practice-one/src/css/components/title.css
@@ -1,12 +1,12 @@
 .title-common-primary {
   color: var(--color-default);
   font-weight: 800;
-  font-size: 2.25rem;
-  margin-bottom: .9375rem;
+  font-size: .36rem;
+  margin-bottom: .15rem;
 }
 
 @media screen and (min-width: 768px) {
   .title-common-primary {
-    font-size: 3rem;
+    font-size: .48rem;
   }
 }
