--- a/practice-one/src/css/bases/layouts.css
+++ b/practice-one/src/css/bases/layouts.css
@@ -27,6 +27,10 @@ main {
 }
 
 @media screen and (min-width: 768px) {
+  html {
+    font-size: 625%;
+  }
+
   .container {
     min-width: 768px;
   }
@@ -44,7 +48,7 @@ main {
   }
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 1024.5px) {
   .container {
     min-width: 1024px;
   }
