--- a/practice-one/src/css/components/button.css
+++ b/practice-one/src/css/components/button.css
@@ -25,3 +25,9 @@
 .button-common-primary:hover .button-wrapper {
     color: var(--color-secondary);
 }
+
+@media screen and (min-width: 768px) {
+    .button-common-primary .button-wrapper {
+        font-size: 16px;
+    }
+}
