--- a/practice-one/src/css/sections/contact.css
+++ b/practice-one/src/css/sections/contact.css
@@ -1,34 +1,34 @@
 .section-top-contact {
   text-align: center;
-  padding: 12.5rem 0 5.125rem;
+  padding: 2rem 0 .82rem;
 }
 
 .section-top-contact .title-common-primary {
   position: relative;
-  margin-bottom: .75rem;
+  margin-bottom: .12rem;
 }
 
 .section-top-contact .detail-common-primary {
-  font-size: .875rem;
+  font-size: .14rem;
   line-height: calc(25 / 14);
-  margin-bottom: 1.25rem;
+  margin-bottom: .2rem;
 }
 
 .section-top-contact .title-common-primary::before {
   content: '';
   position: absolute;
   display: block;
-  width: 5.625rem;
-  height: 5.625rem;
+  width: .9rem;
+  height: .9rem;
   background: url("../../assets/icons/icon_contanct.svg") center/cover no-repeat;
-  top: -110px;
+  top: -1.1rem;
   left: 50%;
   transform: translateX(-50%);
 }
 
 .section-top-contact .button-common-primary {
-  max-width: calc(124px - 40px);
-  min-height: calc(42px - 20px);
+  max-width: calc(1.24rem - .4rem);
+  min-height: calc(.42rem - .2rem);
   margin: 0 auto;
 }
 
@@ -47,14 +47,14 @@
   }
 
   .section-top-contact .detail-common-primary {
-    font-size: 1.125rem;
+    font-size: .18rem;
     line-height: calc(32 / 18);
     margin-bottom: 30px;
     
   }
 
   .section-top-contact .button-common-primary .button-wrapper {
-    font-size: 1.5rem;
+    font-size: .24rem;
   }
 
   .section-top-contact .button-common-primary {
