--- a/practice-one/src/css/sections/information.css
+++ b/practice-one/src/css/sections/information.css
@@ -1,8 +1,8 @@
 .section-top-info {
-  padding: 6.625rem 0 5rem;
+  padding: 1.06rem 0 .8rem;
 }
 @media screen and (min-width: 768px) {
   .section-top-info {
-    padding: 10rem 0;
+    padding: 160px 0;
   }
 }
