--- a/practice-one/src/css/sections/reference.css
+++ b/practice-one/src/css/sections/reference.css
@@ -1,15 +1,15 @@
 .section-top-reference {
   background-color: #f4f5f7;
   text-align: center;
-  padding: 2.5rem 0;
+  padding: .4rem 0;
 }
 
 .section-top-reference .title-common-primary {
-  margin-bottom: 0.875rem;
+  margin-bottom: .14rem;
 }
 
 .section-top-reference .detail-common-primary {
-  margin-bottom: 2.5rem;
+  margin-bottom: .4rem;
   font-weight: 500;
 }
 
@@ -20,14 +20,14 @@
 
   .section-top-reference .detail-common-primary {
     margin-bottom: 48px;
-    font-size: 1.125rem;
+    font-size: .18rem;
   }
 
   .section-top-reference .reference-company {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1.5rem;
+    gap: 24px;
   }
 }
 
@@ -37,6 +37,6 @@
   }
 
   .section-top-reference .detail-common-primary {
-    font-size: 1.125rem;
+    font-size: 18px;
   }
 }
