Fix button ,title and detail common

--- a/practice-one/src/components/button.html
+++ b/practice-one/src/components/button.html
@@ -1,5 +1,3 @@
-<a class="button-common-primary" href="#">
-  <span class="button-wrapper">
+<a class="button-primary" href="#">
     {{text}}
-  </span>
 </a>
