--- a/practice-one/src/components/info-blog.html
+++ b/practice-one/src/components/info-blog.html
@@ -3,11 +3,9 @@
     <img src={{image}} width="335" height="312" loading="lazy" alt={{title}}>
   </figure>
   <div class="blog-content">
-    <h2 class="title-common-primary">{{title}}</h2>
-    <p class="detail-common-primary">{{detail}}</p>
-    <a class="button-common-primary" href="#">
-      <span class="button-wrapper">Keşfet</span>
-    </a>
+    <h2 class="title-primary">{{title}}</h2>
+    <p class="detail-primary">{{detail}}</p>
+    <a class="button-primary" href="#">Keşfet</a>
   </div>
   <figure class="blog-thumbnail is-desktop ">
     <img src={{image}} width="504" height="408" loading="lazy" alt={{title}}>
