--- a/practice-one/src/css/components/button.css
+++ b/practice-one/src/css/components/button.css
@@ -1,33 +1,20 @@
-.button-common-primary {
+.button-primary {
     display: flex;
+    flex: 0 0 auto;
     align-items: center;
     justify-content: center;
     background-color: var(--color-secondary);
+    color: var(--color-primary);
+    font-family: Manrope, sans-serif;
+    font-size: var(--font-size-default);
+    font-weight: 700;
     padding: .1rem .2rem;
     border-radius: .05rem;
     transition: .4s;
     cursor: pointer;
-    flex: 0 0 auto;
-    font-family: Manrope, sans-serif;
 }
 
-.button-common-primary .button-wrapper {
-    color: var(--color-primary);
-    transition: .4s;
-    font-size: var(--font-size-default);
-    font-weight: 700;
-}
-
-.button-common-primary:hover {
+.button-primary:hover {
     background-color: var(--color-default);
-}
-
-.button-common-primary:hover .button-wrapper {
     color: var(--color-secondary);
-}
-
-@media screen and (min-width: 768px) {
-    .button-common-primary .button-wrapper {
-        font-size: 16px;
-    }
 }
