--- a/practice-one/src/css/components/detail.css
+++ b/practice-one/src/css/components/detail.css
@@ -1,4 +1,4 @@
-.detail-common-primary {
+.detail-primary {
   color: var(--color-default);
   font-weight: 400;
   font-size: .12rem;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .detail-common-primary {
+  .detail-primary {
     font-size: .24rem;
   }
 }
