--- a/practice-one/src/css/components/info-blog.css
+++ b/practice-one/src/css/components/info-blog.css
@@ -20,18 +20,18 @@
   text-align: center;
 }
 
-.info-blog .detail-common-primary {
+.info-blog .detail-primary {
   font-size: .14rem;
   line-height: calc(28.5 / 14);
   color: #808080;
   margin-bottom: .4rem;
 }
 
-.info-blog .button-common-primary {
+.info-blog .button-primary {
   padding: .12rem .2rem;
 }
 
-.info-blog .button-common-primary .button-wrapper {
+.info-blog .button-primary .button-wrapper {
   font-size: .14rem;
 }
 
@@ -44,13 +44,13 @@
     flex-direction: row-reverse;
   }
 
-  .info-blog .title-common-primary {
+  .info-blog .title-primary {
     margin-bottom: 20px;
     font-size: .58rem;
     line-height: calc(59.5 / 58);
   }
   
-  .info-blog .detail-common-primary {
+  .info-blog .detail-primary {
     margin-bottom: 46px;
   }
 
@@ -69,7 +69,7 @@
     padding: 0 0 0 56px;
   }
 
-  .info-blog .button-common-primary {
+  .info-blog .button-primary {
     max-width: calc(160px - 40px);
     min-height: calc(48px - 24px);
   }
@@ -91,13 +91,13 @@
     padding: 0 0 0 145px;
   }
 
-  .info-blog .title-common-primary {
+  .info-blog .title-primary {
     margin-bottom: 40px;
     font-size: .64rem;
     line-height: calc(76 / 64);
   }
 
-  .info-blog .detail-common-primary {
+  .info-blog .detail-primary {
     margin-bottom: 80px;
     font-size: var(--font-size-default);
     line-height: calc(32 / 16);
