--- a/practice-one/src/css/sections/contact.css
+++ b/practice-one/src/css/sections/contact.css
@@ -3,18 +3,18 @@
   padding: 2rem 0 .82rem;
 }
 
-.section-top-contact .title-common-primary {
+.section-top-contact .title-primary {
   position: relative;
   margin-bottom: .12rem;
 }
 
-.section-top-contact .detail-common-primary {
+.section-top-contact .detail-primary {
   font-size: .14rem;
   line-height: calc(25 / 14);
   margin-bottom: .2rem;
 }
 
-.section-top-contact .title-common-primary::before {
+.section-top-contact .title-primary::before {
   content: '';
   position: absolute;
   display: block;
@@ -26,7 +26,7 @@
   transform: translateX(-50%);
 }
 
-.section-top-contact .button-common-primary {
+.section-top-contact .button-primary {
   max-width: calc(1.24rem - .4rem);
   min-height: calc(.42rem - .2rem);
   margin: 0 auto;
@@ -37,27 +37,27 @@
     padding: 290px 0 160px;
   }
 
-  .section-top-contact .title-common-primary {
+  .section-top-contact .title-primary {
     margin-bottom: 20px;
   }
 
-  .section-top-contact .title-common-primary::before {
+  .section-top-contact .title-primary::before {
     width: 120px;
     height: 120px;
   }
 
-  .section-top-contact .detail-common-primary {
+  .section-top-contact .detail-primary {
     font-size: .18rem;
     line-height: calc(32 / 18);
     margin-bottom: 30px;
     
   }
 
-  .section-top-contact .button-common-primary .button-wrapper {
+  .section-top-contact .button-primary .button-wrapper {
     font-size: .24rem;
   }
 
-  .section-top-contact .button-common-primary {
+  .section-top-contact .button-primary {
     max-width: calc(204px - 40px);
     min-height: calc(70px - 20px);
     margin: 0 auto;
