--- a/practice-one/src/components/footer.html
+++ b/practice-one/src/components/footer.html
@@ -4,35 +4,35 @@
       <div class="navigation-item">
         <h2 class="navigation-title">Çözüm ve Hizmetler</h2>
         <ul class="navigation-list">
-          <li class="list-item"><a href="#">Yazılım Geliştirme</a></li>
-          <li class="list-item"><a href="#">Outsourcing</a></li>
-          <li class="list-item"><a href="#">Kalite ve Süreç Yönetimi</a></li>
-          <li class="list-item"><a href="#">Danışmanlık</a></li>
-          <li class="list-item"><a href="#">IoT Destekli Çözümler</a></li>
+          <li class="list-item"><a class="item-link" href="#">Yazılım Geliştirme</a></li>
+          <li class="list-item"><a class="item-link" href="#">Outsourcing</a></li>
+          <li class="list-item"><a class="item-link" href="#">Kalite ve Süreç Yönetimi</a></li>
+          <li class="list-item"><a class="item-link" href="#">Danışmanlık</a></li>
+          <li class="list-item"><a class="item-link" href="#">IoT Destekli Çözümler</a></li>
         </ul>
       </div>
       <div class="navigation-item">
         <h2 class="navigation-title">Ürünler</h2>
         <ul class="navigation-list">
-          <li class="list-item"><a href="#">Eğitim Yönetim Sistemi</a></li>
-          <li class="list-item"><a href="#">İnsan Sermayesi Yönetim Sistemi</a></li>
-          <li class="list-item"><a href="#">Müşteri İlişkileri Yönetim Sistemi</a></li>
-          <li class="list-item"><a href="#">İçerik Yönetim Sistemi</a></li>
+          <li class="list-item"><a class="item-link" href="#">Eğitim Yönetim Sistemi</a></li>
+          <li class="list-item"><a class="item-link" href="#">İnsan Sermayesi Yönetim Sistemi</a></li>
+          <li class="list-item"><a class="item-link" href="#">Müşteri İlişkileri Yönetim Sistemi</a></li>
+          <li class="list-item"><a class="item-link" href="#">İçerik Yönetim Sistemi</a></li>
         </ul>
       </div>
       <div class="navigation-item">
         <h2 class="navigation-title">Kurumsal</h2>
         <ul class="navigation-list">
-          <li class="list-item"><a href="#">Hakkımızda</a></li>
-          <li class="list-item"><a href="#">Belge ve Yetkinlikler</a></li>
-          <li class="list-item"><a href="#">İş Ortakları</a></li>
+          <li class="list-item"><a class="item-link" href="#">Hakkımızda</a></li>
+          <li class="list-item"><a class="item-link" href="#">Belge ve Yetkinlikler</a></li>
+          <li class="list-item"><a class="item-link" href="#">İş Ortakları</a></li>
         </ul>
       </div>
       <div class="navigation-item">
         <h2 class="navigation-title">İletişim</h2>
         <ul class="navigation-list">
-          <li class="list-item"><a href="#">Bilgi İstek Formu</a></li>
-          <li class="list-item"><a href="#">Uzman Talep Formu</a></li>
+          <li class="list-item"><a class="item-link" href="#">Bilgi İstek Formu</a></li>
+          <li class="list-item"><a class="item-link" href="#">Uzman Talep Formu</a></li>
         </ul>
       </div>
     </nav>
