--- a/practice-one/src/components/info-blog.html
+++ b/practice-one/src/components/info-blog.html
@@ -1,6 +1,6 @@
 <div class="info-blog">
   <figure class="blog-thumbnail is-mobile">
-    <img src={{image}} width="335" height="312" loading="lazy" alt={{title}}>
+    <img class="thumbnail-item" src={{image}} width="335" height="312" loading="lazy" alt={{title}}>
   </figure>
   <div class="blog-content">
     <h2 class="title-primary">{{title}}</h2>
@@ -8,6 +8,6 @@
     <a class="button-primary" href="#">Keşfet</a>
   </div>
   <figure class="blog-thumbnail is-desktop ">
-    <img src={{image}} width="504" height="408" loading="lazy" alt={{title}}>
+    <img class="thumbnail-item" src={{image}} width="504" height="408" loading="lazy" alt={{title}}>
   </figure>
 </div>
