--- a/practice-one/src/components/company-item.html
+++ b/practice-one/src/components/company-item.html
@@ -1,5 +1,5 @@
 <div class="company-wrapper">
   <figure class="company-logo">
-    <img src="{{logo}}" width="134" height="68" loading="lazy" alt={{textAlt}}>
+    <img class="logo-img" src="{{logo}}" width="134" height="68" loading="lazy" alt={{textAlt}}>
   </figure>
 </div>
