--- a/practice-one/src/components/manage-item.html
+++ b/practice-one/src/components/manage-item.html
@@ -1,6 +1,6 @@
-<li>
+<li class="list-item">
     <picture class="manage-icon">
-        <img src="{{image}}" width="88" height="82" loading="lazy" alt="{{title}}" />
+        <img class="icon-img" src="{{image}}" width="88" height="82" loading="lazy" alt="{{title}}" />
     </picture>
     <h3 class="manage-title">{{title}}</h3>
     <p class="manage-desc">Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
