--- a/practice-one/src/css/components/company-item.css
+++ b/practice-one/src/css/components/company-item.css
@@ -31,7 +31,7 @@
   padding: .15rem .18rem;
 }
 
-.company-item .company-logo img {
+.company-item .company-logo .logo-img {
   width: 100%;
   height: 100%;
   object-fit: contain;
