--- a/practice-one/src/css/components/info-blog.css
+++ b/practice-one/src/css/components/info-blog.css
@@ -2,21 +2,21 @@
   margin-bottom: .6rem;
 }
 
-.info-blog .blog-thumbnail {
+.blog-thumbnail {
   width: 100%;
   height: 3.12rem;
   border-radius: 8px;
   margin-bottom: .3rem;
 }
 
-.info-blog .blog-thumbnail img {
+.blog-thumbnail .thumbnail-item {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 8px;
 }
 
-.info-blog .blog-content {
+.blog-content {
   text-align: center;
 }
 
@@ -49,18 +49,18 @@
     font-size: .58rem;
     line-height: calc(59.5 / 58);
   }
-  
+
   .info-blog .detail-primary {
     margin-bottom: 46px;
   }
 
-  .info-blog .blog-thumbnail {
+  .blog-thumbnail {
     width: 424px;
     height: 404px;
     flex: 0 0 auto;
   }
 
-  .info-blog .blog-content {
+  .blog-content {
     text-align: left;
     padding-right: 52px;
   }
@@ -76,13 +76,13 @@
 }
 
 @media screen and (min-width: 1025px) {
-  .info-blog .blog-thumbnail {
+  .blog-thumbnail {
     width: 504px;
     height: 480px;
     flex: 0 0 auto;
   }
 
-  .info-blog .blog-content {
+  .blog-content {
     text-align: left;
     padding-right: 170px;
   }
