--- a/practice-one/src/css/components/manage-item.css
+++ b/practice-one/src/css/components/manage-item.css
@@ -5,12 +5,12 @@
   margin: 0 auto .1rem;
 }
 
-.manage-list li {
+.manage-list .list-item {
   width: 3.16rem;
   margin: 0 auto .8rem;
 }
 
-.manage-list .manage-icon img {
+.manage-icon .icon-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -38,12 +38,12 @@
     margin: 0 auto;
   }
 
-  .manage-list li {
+  .manage-list .list-item {
     width: calc((100% - 116px) / 2);
     margin: 0 116px 88px 0;
   }
 
-  .manage-list li:nth-child(2n) {
+  .manage-list .list-item:nth-child(2n) {
     margin-right: 0;
   }
 
@@ -61,12 +61,12 @@
     max-width: none;
   }
 
-  .manage-list li {
+  .manage-list .list-item {
     width: calc((100% - 116px) / 3);
     margin: 0 116px 90px 0;
   }
 
-  .manage-list li:nth-child(2n + 1) {
+  .manage-list .list-item:nth-child(2n + 1) {
     margin-right: 0;
   }
 }
