fix unit css for footer and keyvisual file

--- a/practice-one/src/css/sections/keyvisual.css
+++ b/practice-one/src/css/sections/keyvisual.css
@@ -65,7 +65,7 @@
 
 @media screen and (min-width: 768px) {
   .section-top-keyvisual {
-    margin-top: -.8rem;
+    margin-top: -80px;
     padding: 161px 0 127px;
   }
 
