--- a/practice-one/src/css/components/footer.css
+++ b/practice-one/src/css/components/footer.css
@@ -100,7 +100,7 @@
 @media screen and (min-width: 768px) {
   .footer-wrapper {
     max-width: 906px;
-    padding-bottom: .7rem;
+    padding-bottom: 70px;
   }
 
   .footer-navigation {
@@ -128,6 +128,6 @@
 @media screen and (min-width: 1025px) {
   .footer-wrapper {
     max-width: 1238px;
-    padding-bottom: .7rem;
+    padding-bottom: 70px;
   }
 }
