rename image file

--- a/practice-one/src/components/keyvisual.html
+++ b/practice-one/src/components/keyvisual.html
@@ -1,7 +1,7 @@
 <section class="section-top-keyvisual">
   <picture class="keyvisual-background">
-    <source media="(min-width: 768px)" srcset="./assets/images/img_top_keyvisual.jpg.webp">
-    <img src="./assets/images/sp/img_top_keyvisual.jpg.webp" loading="eager" alt="Bilgi Teknolojilerinde 23 Yıllık Tecrübe">
+    <source media="(min-width: 768px)" srcset="./assets/images/img_top_keyvisual.webp">
+    <img src="./assets/images/sp/img_top_keyvisual.webp" loading="eager" alt="Bilgi Teknolojilerinde 23 Yıllık Tecrübe">
   </picture>
   <div class="wrapper">
     <div class="keyvisual-content">
