Using common class wrapper

--- a/practice-one/src/components/footer.html
+++ b/practice-one/src/components/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="footer-wrapper">
+  <div class="wrapper">
     <nav class="footer-navigation">
       <div class="navigation-item">
         <h2 class="navigation-title">Çözüm ve Hizmetler</h2>
