--- a/practice-one/src/components/header.html
+++ b/practice-one/src/components/header.html
@@ -1,5 +1,5 @@
-<header>
-  <div class="header-wrapper">
+<header class="header">
+  <div class="wrapper">
     <nav class="header-navigation mobile-nav">
       <div class="navigation-wrapper">
         <ul class="navigation-list">
