--- a/practice-one/src/css/bases/layouts.css
+++ b/practice-one/src/css/bases/layouts.css
@@ -3,8 +3,8 @@ html {
 }
 
 body {
-  font-family: Manrope, sans-serif;
-  font-size: .16rem;
+  font-family: var(--font-manrope);
+  font-size: var(--font-size-default);
 }
 
 .container {
@@ -28,15 +28,16 @@ main {
 
 @media screen and (min-width: 768px) {
   html {
-    font-size: initial;
+    /* trick css to 625% * 16 = 100 => 1rem = 100px */
+    font-size: 625%;
   }
 
   .container {
-    min-width: 768px;
+    min-width: var(--width-tablet);
   }
 
   .wrapper {
-    max-width: 906px;
+    max-width: var(--width-wrapper-tablet);
   }
 
   .is-desktop {
@@ -50,10 +51,10 @@ main {
 
 @media screen and (min-width: 1024.5px) {
   .container {
-    min-width: 1024px;
+    min-width: var(--width-desktop);
   }
 
   .wrapper {
-    max-width: 1197px;
+    max-width: var(--width-wrapper-desktop);
   }
 }
