--- a/practice-one/src/css/components/footer.css
+++ b/practice-one/src/css/components/footer.css
@@ -1,7 +1,7 @@
 .footer {
   background-color: var(--color-quaternary);
   font-size: var(--font-size-default);
-  font-family: Inter, sans-serif;
+  font-family: var(--font-inter);
   width: 100%;
 }
 
