fix constrast color

--- a/practice-one/src/css/bases/variables.css
+++ b/practice-one/src/css/bases/variables.css
@@ -2,7 +2,7 @@
   /* color */
   --color-default: #000;
   --color-primary: #fff;
-  --color-secondary: #f84646;
+  --color-secondary: #b10707;
   --color-tertiary: #e6e6e6;
   --color-quaternary: #f8464a;
 
