change color for background foote

--- a/practice-one/src/css/bases/variables.css
+++ b/practice-one/src/css/bases/variables.css
@@ -4,7 +4,7 @@
   --color-primary: #fff;
   --color-secondary: #b10707;
   --color-tertiary: #e6e6e6;
-  --color-quaternary: #f8464a;
+  --color-quaternary: #b1070c;
 
   /* font-size */
   --font-size-default: .16rem;
